Develop (#108)
* add backup cron script

* Ops/upgrade pom (#107)